adding json generator